vertically align left header area (bug 787550)

--- a/media/css/ecosystem/landing.less
+++ b/media/css/ecosystem/landing.less
@@ -96,9 +96,9 @@ body {
     div {
         float: left;
         text-align: center;
-        width: 49%;
+        width: 46%;
         color: white;
-        margin-top: 40px;
+        margin-top: 20px;
         p {
             margin: 10px 0 20px;
         }
